# AdventOfCode2022

./: .gitignore
day01/: day01.cabal
day01/app/: Main.hs
day02/: day02.cabal
day02/app/: Main.hs
day03/: day3.fsx
day04/: day4.lisp
day05/: day5.lisp
day06/: aoc2022.day6.asd  day06.cabal  day6-coalton.lisp  day6.lisp  packages.lisp
day06/app/: Main.hs
day07/: day7.lisp
day08/: aoc2022.day8.asd  day8.lisp  package.lisp
day09/: day09.cabal
day09/app/: Main.hs
day10/: aoc2022.day10.asd  day10.lisp  package.lisp
