cabal-version:      2.4
name:               day09
version:            0.1.0.0
maintainer:         tssund93@gmail.com
author:             Travis
extra-source-files: CHANGELOG.md

executable day09
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.15, containers
